# lerobot-sim2real

./: .gitignore  README.md  fpo_run.sh  fpo_run_rescue.sh  main.py  ppo_run.sh  pyproject.toml  updated_readme.md
docs/: evaluations.md  fpo_sim2real_guide.md
lerobot_sim2real/rl/: fpo_rgb.py  network.py  train_fpo.py
lerobot_sim2real/scripts/: eval_fpo_rgb.py  train_fpo_rgb.py
runs/SO100GraspCube-v1__fpo_rgb__3__1755422718/: events.out.tfevents.1755422724.mini-omen.4751.0
runs/SO100GraspCube-v1__fpo_rgb__3__1755422879/: events.out.tfevents.1755422884.mini-omen.20000.0
runs/SO100GraspCube-v1__fpo_rgb__3__1755423161/: events.out.tfevents.1755423167.mini-omen.35395.0
runs/SO100GraspCube-v1__fpo_rgb__3__1755423197/: events.out.tfevents.1755423202.mini-omen.50515.0
runs/SO100GraspCube-v1__fpo_rgb__3__1755423243/: events.out.tfevents.1755423248.mini-omen.65427.0
runs/SO100GraspCube-v1__fpo_rgb__3__1755423355/: events.out.tfevents.1755423360.mini-omen.80489.0
runs/SO100GraspCube-v1__fpo_rgb__3__1755423435/: events.out.tfevents.1755423440.mini-omen.95615.0
runs/SO100GraspCube-v1__fpo_rgb__3__1755424538/: events.out.tfevents.1755424543.mini-omen.111244.0
runs/SO100GraspCube-v1__fpo_rgb__3__1755424592/: events.out.tfevents.1755424598.mini-omen.126761.0
runs/SO100GraspCube-v1__fpo_rgb__3__1755424976/: events.out.tfevents.1755424981.mini-omen.142554.0
runs/SO100GraspCube-v1__fpo_rgb__3__1755425021/: events.out.tfevents.1755425025.mini-omen.158053.0
runs/fpo-SO100GraspCube-v1-rgb-3/: events.out.tfevents.1755422357.mini-omen.98090.0  (+2 more)
wandb/: latest-run
(+27 files in other folders)
